# quarry-core

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: assistant_config_few_shot.md  assistant_config_multi_turn.md  model_info.md  models_anthropic.json  models_gemini.json  models_openai.json
examples/: web_page_scraping_example.py
examples/web/: web_page_scraping_example.py
src/quarry_core/framework/data/formatter/html/: html_to_dict_formatter.py  html_to_dict_transformer.py
src/quarry_core/framework/data/formatter/markdown/: markdown_formatter.py  markdown_transformer.py
src/quarry_core/framework/web/html/: html2text_extended.py  html_2_text_lxml.py  html_data_elements_extractor.py  html_element_xpaths.py  html_metadata_extractor.py  lxml_html_tree_sanitizer.py  scrapy_html_content_spider.py  scrapy_html_loader.py
src/quarry_core/libraries/framework/web/: html_2_text_lxml.py  html_data_elements_extractor.py  html_metadata_extractor.py  html_tree_sanitizer_config.py  lxml_html_tree_sanitizer.py  random_user_agent.py  scrapy_html_loader.py
src/quarry_core/libs/framework/utils/web/: html_2_text_lxml.py  html_data_elements_extractor.py  html_element_xpaths.py  (+3 more)
src/quarry_core/utilities/: constants.py  dataframe_util.py
src/quarry_core/utils/dtype/: dataframe_util.py  datetime_util.py
src/quarry_core/utils/web/: html_2_text_lxml.py  html_data_elements_extractor.py  html_metadata_extractor.py  html_page_content.py  html_to_dict_transformer.py  lxml_html_tree_sanitizer.py  markdown_transformer.py  scrapy_html_loader.py
(+4 files in other folders)
