[tool.poetry]
name = "quarry-core"
version = "1.0.0"
description = "Quarry Core Repo"
authors = []
license = "MIT"
readme = "README.md"
repository = "https://github.com/quarryai/quarry-core"
homepage = "https://github.com/quarryai/quarry-core"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pydantic = "2.8.2"
aiohttp = "3.10.5"
feedparser = "6.0.11"
spacy = "3.7.5"
nltk = "3.9.1"
contractions = "0.1.73"
textblob = "0.18.0.post0"
beautifulsoup4 = "4.12.3"
pandas = "2.2.2"
fuzzywuzzy = "0.18.0"
pytz = "2024.1"
html2text = "2024.2.26"
lxml = "5.3.0"
playwright = "1.46.0"
readability = "0.3.1"
lxml-html-clean = "0.2.0"
python-dateutil = "2.9.0.post0"
requests = "2.32.3"
Scrapy = "2.11.2"
python-dotenv = "1.0.1"
markdown2 = "2.5.0"
rich = "13.7.1"
orjson = "3.10.7"
tabulate = "0.9.0"
unstructured = "0.15.6"
html5lib = "1.1"
fake-useragent = "1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
sphinx = "^4.0"
ruff = "^0.5.5"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.black]
line-length = 110
skip-string-normalization = true